@@ -6014,6 +6014,9 @@
                             <para>Fixed problem #595097 (build error for poppler >= 0.11.3)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed debian problem #438884 (wrong device label when switching panels with CTRL+U)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem with broken file icon after renaming a symbolic link</para>
                         </listitem>
                     </itemizedlist>
