@@ -12,13 +12,14 @@ New features:
       ...            ...
 
 
-=======
+===================================
 gnome-commander 1.2.8.2
 ---------------
 
 Bug fixes:
  * Fixed problem #591944 (permissions set to 000 after chmod)
  * Fixed problem #595097 (build error for poppler >= 0.11.3)
+ * Fixed debian problem #438884 (wrong device label when switching panels with CTRL+U)
  * Fixed problem with broken file icon after renaming a symbolic link
 
 
